apps/demo-concept/py-app/deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: py-app
  labels:
    app: py-app
spec:
  type: ClusterIP
  selector:
    app: py-app
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
