apps/demo-concept/py-app/deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: py-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - PLACEHOLDER.k3s.gillouche.homelab
  rules:
  - host: PLACEHOLDER.k3s.gillouche.homelab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: py-app
            port:
              number: 80
